contract-chameleon.lang.contract_lib.tools/src/test/resources/ast/errors/TyposKeywordContract.clib
;typo in keyword
(declare-contract contractA
  (
    (input (in Bool))
    (result (out Bool))
  )
  ((true true))
)

;valid contract
(define-contract contractA
  (
    (input (in Bool))
    (result (out Bool))
  )
  ((true true))
)
